--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "nuxt": "^2.14.0"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.11.2"
+    "@mdi/font": "^5.5.55",
+    "@mdi/js": "^5.5.55",
+    "@nuxtjs/vuetify": "^1.11.2",
+    "material-design-icons-iconfont": "^6.1.0"
   }
 }
